--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-AWS_ACCESS_KEY_ID = AKIA2JED2EYLHH2KYDU2
-AWS_SECRET_ACCESS_KEY = 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
-AWS_DEFAULT_REGION = eu-north-1
+AWS_ACCESS_KEY_ID = x
+AWS_SECRET_ACCESS_KEY = x
+AWS_DEFAULT_REGION = x
